Layout in Account + Problems

--- a/Happyling/de.lproj/Main.strings
+++ b/Happyling/de.lproj/Main.strings
@@ -57,7 +57,7 @@
 "MTj-SM-xli.text" = "Attachment:";
 
 /* Class = "UITabBarItem"; title = "Me"; ObjectID = "MVn-sN-1xb"; */
-"MVn-sN-1xb.title" = "Me";
+"MVn-sN-1xb.title" = "Account";
 
 /* Class = "UILabel"; text = "Web Site"; ObjectID = "Mn8-qe-GOL"; */
 "Mn8-qe-GOL.text" = "Web Site";
