--- a/Happyling/de.lproj/Localizable.strings
+++ b/Happyling/de.lproj/Localizable.strings
@@ -26,6 +26,10 @@
 
 "SIGN_OUT" = "Sign out";
 
+"SHARE_SOLVE" = "Share your disappoitment. Solve a problem";
+
+"WE_CARE" = "We care about customer.";
+
 "NO_INTERNET_CONNECTION" = "Es besteht keine Internetverbindung. Bitte überprüfe die Einstellungen deiner mobilen Daten oder verbinde dich mit einem WLAN-Netzwerk.";
 
 "SUCCESSFUL_REGISTRATION" = "Registrierung erfolgreich";
