--- a/Happyling/en.lproj/Localizable.strings
+++ b/Happyling/en.lproj/Localizable.strings
@@ -18,7 +18,7 @@
 
 "PROBLEMS_SOLVED" = "Problems Solved";
 
-"PROBLEMS_NOT_SOLVED" = "Problems not opened";
+"PROBLEMS_NOT_SOLVED" = "Problems not solved";
 
 "RATING_APP" = "Rating App";
 
